// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentComponent activityRectangles null should not render 1`] = `
<div
  id="root0"
  ngx-d3timeline-content=""
>
  <defs
    ngx-d3timeline-clip-path=""
  >
    <g />
  </defs>
  <g
    clip-path="url(#clipRect)"
  >
    
  </g>
</div>
`;

exports[`ContentComponent activityRectangles null should not render when draggingRectangle set 1`] = `
<div
  id="root1"
  ngx-d3timeline-content=""
>
  <defs
    ngx-d3timeline-clip-path=""
  >
    <g />
  </defs>
  <g
    clip-path="url(#clipRect)"
  >
    
  </g>
</div>
`;

exports[`ContentComponent activityRectangles null should not render when dropRectangle set 1`] = `
<div
  id="root2"
  ngx-d3timeline-content=""
>
  <defs
    ngx-d3timeline-clip-path=""
  >
    <g />
  </defs>
  <g
    clip-path="url(#clipRect)"
  >
    
  </g>
</div>
`;

exports[`ContentComponent activityRectangles null should not render when fromRectangle set 1`] = `
<div
  id="root3"
  ngx-d3timeline-content=""
>
  <defs
    ngx-d3timeline-clip-path=""
  >
    <g />
  </defs>
  <g
    clip-path="url(#clipRect)"
  >
    
  </g>
</div>
`;

exports[`ContentComponent activityRectangles set should render 1`] = `
<div
  id="root4"
  ngx-d3timeline-content=""
>
  <defs
    ngx-d3timeline-clip-path=""
  >
    <g />
  </defs>
  <g
    clip-path="url(#clipRect)"
  >
    
    <g
      class="content-group"
    >
      
      <g
        ngx-d3timeline-activity-rectangle=""
      >
        <g />
      </g>
      <g
        ngx-d3timeline-activity-rectangle=""
      >
        <g />
      </g>
      
      <g
        class="from-activity-rectangle"
        ngx-d3timeline-activity-rectangle=""
      >
        <g />
      </g>
      
      <g
        class="drop-activity-rectangle"
        ngx-d3timeline-activity-rectangle=""
      >
        <g />
      </g>
      
      <g
        ngx-d3timeline-activity-rectangle=""
      >
        <g />
      </g>
    </g>
  </g>
</div>
`;
